# hemma-os

./: .gitignore  .mcp.json  .netlifyignore  CLAUDE.md  README.md  app.js  bostadskalkyl-react-pilot.md  bostadskalkyl.html  budget.css  budget.js  budget.test.js  calc.js  calc.test.js  charts.js  dom.js  hero-canvas.js  home.css  how-i-deleted-95-of-my-agent-skills-and-got-better-results-nick-nisi-workos.md  hushallsbudget.html  index.html  kalkyl.html  lonevaxling.css  lonevaxling.html  lonevaxling.js  lonevaxling.test.js  manifest.webmanifest  modals.js  mortgagetracker-roadmap.md  mortgagetracker-store.js  mortgagetracker.css  mortgagetracker.html  mortgagetracker.js  mortgagetracker.test.js  netlify.toml  orchestrator.example.toml  orchestrator.toml  orchestrator.v2.example.toml  pages.test.js  red-green-refactor-for-coding-agents.md  salary-store.js  (+3 more)
orchestrator/: CHANGELOG.md  PLAN.md  README.md  pyproject.toml
orchestrator/orchestrator/: agent_frontmatter.py  audit.py  cancellation.py  cli.py  config.py  errors.py  flow.py  git_ops.py  idempotency.py  main.py  manifest.py  mcp_progress.py  mcp_server.py  migrate.py  paths.py  pipeline.py  prompt_loader.py  retry_block.py  run_artifacts.py  run_log.py  steps.py  tool_profile.py  tracing.py  transcript.py  usage.py  workflow.py
orchestrator/tests/: conftest.py  test_langsmith_cost_tracing.py  test_phase11_mcp_server.py  test_phase15_resumable.py  test_phase16_cancel.py  test_phase18_idempotency.py  test_phase19_mcp_progress.py  test_phase20_versioning.py  test_phase26_doc_agent.py  test_phase31_overrides.py  (+36 more)
(+98 files in other folders)
